Fix: horizontal scroll in weapon comparison panel (#1174)
Fixed positioned element with left:0 and right:0 + width: 100% is
redundant and breaks the layout. The same with the display flex, it
already fills the parent element.

--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -1407,7 +1407,6 @@ g {
   left: 0;
   right: 0;
   position: fixed;
-  width: 100%;
   z-index: 3;
   bottom: 0;
   background: #434444;
@@ -1418,6 +1417,7 @@ g {
 dim-compare {
   #loadout-drawer {
     padding-left: 1em;
+    padding-right: 1em;
   }
 }
 
@@ -1428,7 +1428,6 @@ dim-compare {
 .compare-bucket {
   white-space: nowrap;
   overflow-x: scroll;
-  width: 100%;
   display: flex;
   margin-left: 100px;
   .fixed-left {
